--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,9 +1,18 @@
 {
   "compilerOptions": {
+    "target": "es6",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "src/*"
+      ]
     }
   },
   "exclude": [
-    "../node_modules", "dist"]
+    "node_modules",
+    "dist"
+  ],
+  "include": [
+    "src/**/*"
+  ]
 }
