--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.3.1"
   }
 }
